--- a/client/package.json
+++ b/client/package.json
@@ -13,17 +13,18 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/runtime": "^7.15.3",
     "babel-loader": "^8.2.2",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.3.2",
     "http-server": "^0.11.1",
     "style-loader": "^3.2.1",
-    "webpack": "^5.51.1",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
     "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^6.2.4"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2"
   }
