--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel": "^6.23.0",
     "code-mirror-themes": "^1.0.0",
+    "codemirror": "^6.0.1",
     "idb": "^6.1.2"
   }
 }
